# axum_napi_bridge

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README.nmd  apache.conf  entrypoint.sh  example.node  index.d.ts  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: format-lint.yml  publish.yml  test.yml  update-version.yml
__test__/: index.spec.ts
benchmark/: bench.ts
example/: Cargo.toml  app.py  passenger_wsgi.py
example/src/: lib.rs
example/tests/: test_passenger.py  test_server.py
sample/: .gitignore  Cargo.toml  Dockerfile.apache  Dockerfile.passenger  apache_passenger.conf  apache_proxy.conf  index.cjs  index.d.ts  index.mjs  index.node.d.ts  nginx_proxy.conf  package-lock.json  package.json  passenger_nginx.conf  playwright.apache.config.mjs  playwright.config.mjs  playwright.passenger.config.mjs  server.cjs  server.js  server.mjs  server.ts  test.js  tsconfig.json
sample/benchmark/: bridge_bench.js  bridge_bench.ts  concurrent_bench.mjs  express_server.js  express_server.ts  koa_server.js  koa_server.ts
sample/src/: bridge.rs  lib.rs
sample/tests/: bridge.spec.ts  example.spec.mjs  passenger-apache.spec.ts  passenger.spec.ts
scripts/: pre-commit-hook.sh  sync-versions.js  update-version.js
src/: lib.rs
