[workspace]
members = [
    "sample",
]

[workspace.dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
tower = { version = "0.5.0", features = ["util"] }
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
napi = { version = "3.0.0", features = ["tokio_rt", "serde-json"] }
napi-derive = "3.0.0"
napi-build = "2"
axum_napi_bridge = { path = ".", version = "0.1.0" }

[package]
name = "axum_napi_bridge"
version = "0.1.0"
edition = "2021"
description = "A bridge to use axum handlers in Node.js"
license = "MIT"
documentation = "https://docs.rs/axum_napi_bridge"
homepage = "https://github.com/your-username/axum_napi_bridge"
repository = "https://github.com/your-username/axum_napi_bridge"
exclude = [
    "sample/",
    ".github/",
    "apache.conf",
    "index.d.ts",
    "index.js",
    "package.json",
    "package-lock.json",
    "tsconfig.json",
    "wasi-worker-browser.mjs",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[profile.release]
lto = true
strip = "symbols"
