[package]
name = "example_axum_app"
version = "0.1.0"
edition = "2021"

[lib]
name = "example_axum_app"
crate-type = ["cdylib"]

[dependencies]
axum_wsgi = { path = ".." }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
pyo3 = { version = "0.18", features = ["extension-module"] }
hyper = { version = "1", features = ["full"] }
tower = "0.5"
futures-util = "0.3"
