[package]
name = "example-axum-app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]
path = "src/bridge.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
axum_napi_bridge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = "2"
